--- a/tracing-tutorial.ipynb
+++ b/tracing-tutorial.ipynb
@@ -307,9 +307,10 @@
    "source": [
     "# Experiment and run naming\n",
     "username = os.environ.get(\"DOMINO_USER_NAME\", os.environ.get(\"USER\", \"demo_user\"))\n",
+    "project_name = os.environ.get(\"DOMINO_PROJECT_NAME\", \"default\")\n",
     "timestamp = datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "\n",
-    "experiment_name = f\"tracing-{username}\"\n",
+    "experiment_name = f\"tracing-{project_name}-{username}\"\n",
     "run_name = f\"{vertical}-{username}-{timestamp}\"\n",
     "\n",
     "aggregated_metrics = [\n",
