Pushed from Domino: https://se-demo.domino.tech/workspace/andrea_lowe/TriageFlow-GenAI-Tracing?executionId=6999f2569c0619102486650b

--- a/tracing-tutorial.ipynb
+++ b/tracing-tutorial.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e9ec31d1ea643329ddb910952b21ef2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Provider:', options=('openai', 'anthropic'), value='openai')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98029a1edd904b249ffc6476e1f21f61",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Vertical:', options=(('Financial Services', 'financial_services'), ('Healthcare', 'healt…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "provider_dropdown = widgets.Dropdown(\n",
     "    options=[\"openai\", \"anthropic\"],\n",
@@ -82,9 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provider: openai\n",
+      "Model: gpt-4o-mini\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"config.yaml\") as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -105,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Auto-tracing enabled for openai\n"
+     ]
+    }
+   ],
    "source": [
     "import mlflow\n",
     "\n",
@@ -138,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,16 +268,24 @@
     "    response_dict = response.model_dump()\n",
     "    primary = resources_dict.get(\"primary_responder\", {})\n",
     "\n",
-    "    # Run judges inside trace context\n",
-    "    class_judge = judge_classification(client, provider, incident.description, class_dict)\n",
+    "    # Run judges inside trace context (updated signatures include model parameter)\n",
+    "    class_judge = judge_classification(client, provider, model, incident.description, class_dict)\n",
     "    \n",
-    "    comms = response_dict.get(\"communications\", [])\n",
-    "    if comms:\n",
-    "        resp_judge = judge_response(client, provider, incident.description, class_dict.get(\"urgency\", 3), comms[0])\n",
+    "    # judge_response now returns a list of evaluations\n",
+    "    resp_judges = judge_response(client, provider, model, incident.description, response_dict)\n",
+    "    if resp_judges:\n",
+    "        resp_judge = {\"score\": sum(r.get(\"score\", 3) for r in resp_judges) / len(resp_judges)}\n",
     "    else:\n",
-    "        resp_judge = {\"score\": 1}\n",
+    "        resp_judge = {\"score\": 3}\n",
     "    \n",
-    "    triage_judge = judge_triage(client, provider, incident.description, class_dict, impact_dict, resources_dict, response_dict)\n",
+    "    # judge_triage now takes a combined triage_output dict\n",
+    "    triage_output = {\n",
+    "        \"classification\": class_dict,\n",
+    "        \"impact\": impact_dict,\n",
+    "        \"assignment\": resources_dict,\n",
+    "        \"response\": response_dict\n",
+    "    }\n",
+    "    triage_judge = judge_triage(client, provider, model, incident.description, triage_output)\n",
     "\n",
     "    return {\n",
     "        \"classification\": classification,\n",
@@ -260,9 +314,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 10 incidents from financial_services\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticket_id</th>\n",
+       "      <th>description</th>\n",
+       "      <th>source</th>\n",
+       "      <th>reporter</th>\n",
+       "      <th>affected_system</th>\n",
+       "      <th>initial_severity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>FIN-2024-001</td>\n",
+       "      <td>Trading platform experiencing intermittent ord...</td>\n",
+       "      <td>monitoring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Trading Platform</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FIN-2024-002</td>\n",
+       "      <td>Suspicious login attempts detected on wire tra...</td>\n",
+       "      <td>automated_scan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wire Transfer System</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FIN-2024-003</td>\n",
+       "      <td>End-of-day reconciliation report shows $2.3M d...</td>\n",
+       "      <td>monitoring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Settlement System</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FIN-2024-004</td>\n",
+       "      <td>Customer mobile app crash rate spiked to 12% a...</td>\n",
+       "      <td>user_report</td>\n",
+       "      <td>App Support Team</td>\n",
+       "      <td>Mobile Banking App</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FIN-2024-005</td>\n",
+       "      <td>SWIFT message queue backlog growing. Currently...</td>\n",
+       "      <td>monitoring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWIFT Gateway</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>FIN-2024-006</td>\n",
+       "      <td>Fraud detection system generating excessive fa...</td>\n",
+       "      <td>user_report</td>\n",
+       "      <td>Fraud Ops Team</td>\n",
+       "      <td>Fraud Detection Engine</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>FIN-2024-007</td>\n",
+       "      <td>Market data feed from Bloomberg showing stale ...</td>\n",
+       "      <td>monitoring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Market Data Feed</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>FIN-2024-008</td>\n",
+       "      <td>ATM network in midwest region offline. 127 ATM...</td>\n",
+       "      <td>user_report</td>\n",
+       "      <td>ATM Operations</td>\n",
+       "      <td>ATM Network</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>FIN-2024-009</td>\n",
+       "      <td>Regulatory report CCAR-2024-Q4 generation fail...</td>\n",
+       "      <td>monitoring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Risk Analytics Platform</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>FIN-2024-010</td>\n",
+       "      <td>Customer PII potentially exposed via misconfig...</td>\n",
+       "      <td>automated_scan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Customer API Gateway</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ticket_id                                        description  \\\n",
+       "0  FIN-2024-001  Trading platform experiencing intermittent ord...   \n",
+       "1  FIN-2024-002  Suspicious login attempts detected on wire tra...   \n",
+       "2  FIN-2024-003  End-of-day reconciliation report shows $2.3M d...   \n",
+       "3  FIN-2024-004  Customer mobile app crash rate spiked to 12% a...   \n",
+       "4  FIN-2024-005  SWIFT message queue backlog growing. Currently...   \n",
+       "5  FIN-2024-006  Fraud detection system generating excessive fa...   \n",
+       "6  FIN-2024-007  Market data feed from Bloomberg showing stale ...   \n",
+       "7  FIN-2024-008  ATM network in midwest region offline. 127 ATM...   \n",
+       "8  FIN-2024-009  Regulatory report CCAR-2024-Q4 generation fail...   \n",
+       "9  FIN-2024-010  Customer PII potentially exposed via misconfig...   \n",
+       "\n",
+       "           source          reporter          affected_system  initial_severity  \n",
+       "0      monitoring               NaN         Trading Platform                 5  \n",
+       "1  automated_scan               NaN     Wire Transfer System                 5  \n",
+       "2      monitoring               NaN        Settlement System                 4  \n",
+       "3     user_report  App Support Team       Mobile Banking App                 3  \n",
+       "4      monitoring               NaN            SWIFT Gateway                 4  \n",
+       "5     user_report    Fraud Ops Team   Fraud Detection Engine                 3  \n",
+       "6      monitoring               NaN         Market Data Feed                 4  \n",
+       "7     user_report    ATM Operations              ATM Network                 4  \n",
+       "8      monitoring               NaN  Risk Analytics Platform                 3  \n",
+       "9  automated_scan               NaN     Customer API Gateway                 5  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vertical = vertical_dropdown.value\n",
     "df = pd.read_csv(f\"example-data/{vertical}.csv\")\n",
@@ -272,9 +488,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 10 incidents\n"
+     ]
+    }
+   ],
    "source": [
     "def row_to_incident(row) -> Incident:\n",
     "    return Incident(\n",
@@ -301,9 +525,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment: tracing-TriageFlow-GenAI-Tracing-andrea_lowe\n",
+      "Run: financial_services-andrea_lowe-20260222-005606\n"
+     ]
+    }
+   ],
    "source": [
     "# Experiment and run naming\n",
     "username = os.environ.get(\"DOMINO_USER_NAME\", os.environ.get(\"USER\", \"demo_user\"))\n",
@@ -333,7 +566,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing FIN-2024-001...\n",
+      "  → performance | Urgency: 4 | Impact: 5.5\n",
+      "Processing FIN-2024-002...\n",
+      "  → security | Urgency: 5 | Impact: 7.5\n",
+      "Processing FIN-2024-003...\n"
+     ]
+    }
+   ],
    "source": [
     "# Set MLflow experiment\n",
     "mlflow.set_experiment(experiment_name)\n",
